# algorithmsdesignfeup

./: CMakeLists.txt
datp/tp1/: ex1.cpp  ex2.cpp  ex7.cpp
datp/tp3a/: ex1.cpp  ex2.cpp  ex3.cpp
datp/tp4/: exercises.h  graph.h
datp/tp4/files/: ex1b.txt  ex1d.txt
datp/tp7/: ex1.cpp
tp1/: ex3.cpp  ex4.cpp  ex6.cpp
tp2a/: ex1.cpp  ex2.cpp  exercises.h
tp2b/: ex2.cpp
tp3a/: ex4.cpp  ex5.cpp  ex6.cpp
tp4/: ex1.cpp  ex2.cpp  exercises.h  graph.h
tp4/files/: ex1a.txt  ex1c.txt  ex2.txt
tp7/: exercises.h
